--- a/index.html
+++ b/index.html
@@ -8,42 +8,36 @@
 </head>
 <body>
     <header>
-        <h1>📚 Trabalhos do 2° Ano</h1>
+        <h1> Trabalhos do 2° Ano</h1>
         <nav>
-            <a href="index.html">⬅ Voltar para a Página Principal</a>
+            <a href="index.html">⬅ Página Principal</a>
         </nav>
     </header>
 
     <main>
         <section class="grid-trabalhos">
             <div class="card">
-                <h2>🌍 Geografia</h2>
-                <p>Estudo sobre mudanças climáticas.</p>
-                <a href="trabalho-geografia.html">Ver Trabalho</a>
+                <h2>Indicações Back-End</h2>
+                <p>Esxplicação de back end e podcast.</p>
+                <a href="./indicacoesback/index.html">Visualizar</a>
             </div>
             
             <div class="card">
-                <h2>🧮 Matemática</h2>
-                <p>Funções quadráticas e gráficos.</p>
-                <a href="trabalho-matematica.html">Ver Trabalho</a>
+                <h2>Oficinas</h2>
+                <p>Oficinas de Técnico.</p>
+                <a href="./oficinas/index.html">Visualizar</a>
             </div>
             
             <div class="card">
-                <h2>📖 Literatura</h2>
-                <p>Análise de obras do romantismo.</p>
-                <a href="trabalho-literatura.html">Ver Trabalho</a>
-            </div>
-
-            <div class="card">
-                <h2>🔬 Física</h2>
-                <p>Experimentos sobre movimento uniforme.</p>
-                <a href="trabalho-fisica.html">Ver Trabalho</a>
+                <h2>Projeto</h2>
+                <p>Projeto Profissional.</p>
+                <a href="./projeto/index.html">Visualizar</a>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>© 2025 - Meus Trabalhos do 2° Ano</p>
+        <p>Meus Trabalhos do 2° Ano</p>
     </footer>
 </body>
 </html>
